# python-best-practice

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: test.yml
source/ch01/1.4/: unit-test.md
