[tool.poetry]
name = "toyonaka_mb"
version = "0.1.0"
description = ""
authors = ["daiki.tsutsumi <tsutsumi.aie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
nptyping = "^1.4.4"
pydantic = "^2.6.3"
python-dotenv = "^0.21.1"
toml = "^0.10.2"
typer = "^0.4.0"
fire = "^0.4.0"
jaconv = "^0.3"

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^0.0.1a5"
autopep8 = "^1.6.0"
autoflake = "^1.4"
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"
flake8-quotes = "^3.3.1"
flake8-print = "^4.0.0"
isort = "^5.10.1"
black = "^22.1.0"
pytest = "^7.1.0"
pytest-cov = "^3.0.0"
pytest-env = "^0.6.2"
pytest-profiling = "^1.7.0"
pytest-randomly = "^3.11.0"
pytest-timeout = "^2.1.0"
pytest-xdist = "^2.5.0"
tox = "^4.14.1"
moto = "^4.0.3"
pytest-mock = "^3.8.2"
pytest-reportlog = "^0.1.2"
ipykernel = "^6.21.3"
nbconvert = "^7.7.3"
nbstripout = "^0.6.1"
pre-commit = "^3.3.3"
pytest-clarity = "^1.0.1"

[tool.poetry.group.experiments]
optional = true

[tool.poetry.group.experiments.dependencies]
japanize-matplotlib = "^1.1.3"
bert-score = "^0.3.11"
wordcloud = "^1.8.1"
black = {extras = ["jupyter"], version = "^22.6.0"}
tensorboard = "^2.8.0"
progressbar2 = "^4.0.0"
emoji = "^1.7.0"
pytablewriter = "^0.64.1"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
bokeh = "^2.4.2"
holoviews = "^1.14.8"
jupyter = "^1.0.0"
jupyterlab = "^3.3.2"
jupyter-contrib-nbextensions = "^0.5.1"
jupyter_nbextensions_configurator = "^0.4.1"
jupyterthemes = "^0.20.0"
jupyterlab-spreadsheet-editor = "^0.6.1"
requests = "^2.27.1"
tqdm = "^4.63.0"
qgrid = "^1.3.1"
itables = "^0.4.7"
jupyter-autotime = "^1.1.0"
datasketch = "^1.6.4"
flatdict = "^4.0.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.black]
target-version = ['py310']
skip-string-normalization = true
line-length = 119
include = '\.py$'

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
files = "src"
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
allow_redefinition = true
show_error_codes = true
pretty = true
allow_untyped_globals = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"
